--- a/functions/.env.local
+++ b/functions/.env.local
@@ -1,6 +1,6 @@
-DEMO_HOME_URL="http://localhost:3000"
-ADVERTISER_URL="http://localhost:3005"
-PUBLISHER_URL="http://localhost:3006"
-DSP_URL="https://localhost:4437"
-SSP_URL="https://localhost:4438"
-ADTECH_URL="https://localhost:4439"
+DEMO_HOME_URL="https://home.localhost"
+ADTECH_URL="https://adtech.localhost"
+ADVERTISER_URL="https://advertiser.localhost"
+PUBLISHER_URL="https://publisher.localhost"
+DSP_URL="https://dsp.localhost"
+SSP_URL="https://ssp.localhost"
