--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "firebase-tools": "^12.7.0",
     "prettier": "^2.6.2"
   },
   "dependencies": {
